--- a/src/index.css
+++ b/src/index.css
@@ -5,15 +5,10 @@ body {
     sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    /*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*!*/
-    /*    font-weight: 400;*/
     display: flex;
     flex-direction: column;
     height: 100vh;
-    /*height: 100%;*/
-    /*align-items: center;*/
-    /*justify-content: center;*/
-    /*text-align: center;*/
+
 }
 
 code {
@@ -29,4 +24,22 @@ code {
 #map {
     width: 100%;
     height: 300px;
+}
+
+
+#campgroundCarousel {
+    border-top: 0.1rem solid rgba(0, 0, 0, 0.175);
+    border-left: 0.1rem solid rgba(0, 0, 0, 0.175);
+    border-right: 0.1rem solid rgba(0, 0, 0, 0.175);
+}
+
+.carousel-item img {
+    max-height: 700px;
+    object-fit: cover;
+}
+
+.rounded-start {
+    max-height: 366px;
+    aspect-ratio: 4/3;
+    object-fit: contain;
 }
